[package]
name = "wasm-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
log = "0.4.17"
wasm-bindgen = "0.2.87"
gloo = { version = "0.8.0", features = ["futures"] }
library = { path="../library" }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Window',
  'Document',
  'HtmlParagraphElement',
  'HtmlButtonElement',
]
